--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bili-mock",
-  "version": "1.0.0",
-  "description": "restful mock server for front-end developer, fork from imock",
+  "version": "2.0.0",
+  "description": "mock server for front-end developer, fork from imock, support ssi and restful api",
   "main": "app.js",
   "bin": {
     "bili-mock": "./bin/bili-mock"
